# controllers/customers.go
@@ -17,34 +17,43 @@ import (
 func CustomersAutoMigrate() {
 	database.Db.AutoMigrate(&models.Customer{})
 }
+
 // @Security     BearerAuth
 // @Summary      Get all customers
 // @Description  Get all customers
 // @Tags         customers
 // @Accept       json
 // @Produce      json
+// @Param        search   query      string  false  "Search"
+// @Param        order    query      string  false  "Order"
+// @Param        offset   query      string  false  "Offset"
+// @Param        limit    query      string  false  "Limit"
 // @Success      200  {array}   models.CustomersResponse
 // @Failure      500  {object}  models.HTTPError
 // @Router       /customers [get]
-
 func GetCustomers(c *gin.Context) {
-	customers, err := models.GetCustomers(database.Db)
+	var search = c.DefaultQuery("search", "%")
+	var order = c.DefaultQuery("order", "id-desc")
+	var offset = c.DefaultQuery("offset", "0")
+	var limit = c.DefaultQuery("limit", "20")
+	customers, err := models.GetCustomers(database.Db, search, order, offset, limit)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"customers": customers, "count": len(customers)})
+	c.JSON(http.StatusOK, gin.H{"customers": customers, "count": len(customers), "search": search, "order": order, "offset": offset, "limit": limit})
 }
+
 // @Security     BearerAuth
 // @Summary      Get customer by id
 // @Description  Get customer by id
 // @Tags         customers
 // @Accept       json
 // @Produce      json
+// @Param        id   path      uint64  true  "customer id"
 // @Success      200  {object}   models.CustomerResponse
 // @Failure      500  {object}  models.HTTPError
 // @Router       /customers/{id} [get]
-
 func GetCustomerById(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil {
@@ -58,16 +67,17 @@ func GetCustomerById(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"customer": customer})
 }
+
 // @Security     BearerAuth
 // @Summary      Create customer
 // @Description  Create customer
 // @Tags         customers
 // @Accept       json
 // @Produce      json
+// @Param        customer   body      models.Customer  true  "Customer"
 // @Success      201  {object}   models.CustomerResponse
 // @Failure      500  {object}  models.HTTPError
 // @Router       /customers [post]
-
 func CreateCustomer(c *gin.Context) {
 	var customer models.Customer
 	if err := c.ShouldBindJSON(&customer); err != nil {
@@ -81,17 +91,19 @@ func CreateCustomer(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"customer": customer})
 }
+
 // @Security     BearerAuth
 // @Summary      Update customer
 // @Description  Update customer
 // @Tags         customers
 // @Accept       json
 // @Produce      json
+// @Param        id   path      uint64  true  "customer id"
+// @Param        customer   body      models.Customer  true  "Customer"
 // @Success      200  {object}   models.CustomerResponse
 // @Failure      400  {object}  models.HTTPError
 // @Failure      500  {object}  models.HTTPError
 // @Router       /customers/{id} [put]
-
 func UpdateCustomer(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil {
@@ -118,17 +130,18 @@ func UpdateCustomer(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"customer": customer})
 }
+
 // @Security     BearerAuth
 // @Summary      Delete customer
 // @Description  Delete customer
 // @Tags         customers
 // @Accept       json
 // @Produce      json
+// @Param        id   path      uint64  true  "customer id"
 // @Success      200  {object}  models.HTTPResponse
 // @Failure      400  {object}  models.HTTPError
 // @Failure      500  {object}  models.HTTPError
 // @Router       /customers/{id} [delete]
-
 func DeleteCustomer(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil {
