# models/customers.go
@@ -5,6 +5,8 @@ import (
 	// "strings"
 	// "time"
 
+	"strconv"
+	"strings"
 	"time"
 
 	"gorm.io/gorm"
@@ -17,21 +19,34 @@ type Customer struct {
 	Email     string         `json:"email" gorm:"unique;not null"`
 	Phone     string         `json:"phone" gorm:"not null"`
 	Address   string         `json:"address" gorm:"not null"`
-	CreatedAt time.Time      `json:"created_at"` // Automatically managed by GORM for creation time
-	UpdatedAt time.Time      `json:"updated_at"` // Automatically managed by GORM for update time
-	DeletedAt gorm.DeletedAt `json:"deleted_at"` // Automatically managed by GORM
+	CreatedAt time.Time      `json:"created_at"`              // Automatically managed by GORM for creation time
+	UpdatedAt time.Time      `json:"updated_at"`              // Automatically managed by GORM for update time
+	DeletedAt gorm.DeletedAt `json:"deleted_at" gorm:"index"` // Automatically managed by GORM
 }
 type CustomersResponse struct {
 	Customers []Customer `json:"customers"`
 	Count     int        `json:"count"`
+	Search    string     `json:"search"`
+	Order     string     `json:"order"`
+	Offset    string     `json:"offset"`
+	Limit     string     `json:"limit"`
 }
 type CustomerResponse struct {
 	Customer Customer `json:"customer"`
 }
 
-func GetCustomers(db *gorm.DB) ([]Customer, error) {
+func GetCustomers(db *gorm.DB, search string, order string, offset string, limit string) ([]Customer, error) {
 	var customers []Customer
-	result := db.Find(&customers)
+	var orderBy = strings.Replace(order, "-", " ", -1)
+	limitInt, err := strconv.Atoi(limit)
+	if err != nil {
+		return nil, err
+	}
+	offsetInt, err := strconv.Atoi(offset)
+	if err != nil {
+		return nil, err
+	}
+	result := db.Where("CONCAT(name, ' ', gender, ' ', email, ' ', phone, ' ', address) LIKE ?", "%"+search+"%").Order(orderBy).Limit(limitInt).Offset(offsetInt).Find(&customers)
 	if result.Error != nil {
 		return nil, result.Error
 	}
